--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -42,7 +42,7 @@
     justify-content: space-between
 
     +m(size-tiny)
-      line-height: 14px
+      line-height: .875rem
 
   +e(label)
     cursor: pointer
@@ -50,7 +50,7 @@
     line-height: 1em
 
     +m(size-tiny)
-      line-height: 14px
+      line-height: .875rem
       font-size: 12px
 
   +e(label-right)
