--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -88,7 +88,7 @@
 
   +e(error-msg)
     +rem-fallback(font-size, $font-size-xs)
-    +rem-fallback(line-height, $line-height-h5v2)
+    line-height: $line-height-h5v2
     +rem-fallback(right, $space-xs)
     top: 0
     color: color(aorange)
