--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -32,7 +32,7 @@
 
   +e(content)
     +font-size(14)
-    +rem-fallback('line-height', 22px)
+    line-height: 1.375rem
     +rem-fallback('padding', 20px)
     font-weight: 300
     position: relative
