--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -110,7 +110,7 @@
   +element('label')
     +rem-fallback('font-size', $font-size-xs)
     +rem-fallback('border-radius', $radius-m)
-    +rem-fallback('line-height', $line-height-h6v2)
+    line-height: $line-height-h6v2
     display: inline-block
     font-weight: 200
     text-align: center
