--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -14,7 +14,7 @@
       position: relative
       font-size: 20px
       font-weight: 200
-      line-height: 26px
+      line-height: 1.625rem
       cursor: pointer
 
     .pet-results-popup
@@ -36,7 +36,7 @@
           a
             font-size: 16px
             font-weight: 400
-            line-height: 24px
+            line-height: 1.5rem
             display: flex
             width: 88px
 
