--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -60,7 +60,7 @@
 
     p
       font-weight: 300
-      line-height: 20px
+      line-height: 1.25rem
       margin: 0
       white-space: nowrap
       overflow: hidden
