--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -40,7 +40,7 @@
 
   +e(error-msg)
     @include rem-fallback('font-size', $font-size-xs)
-    @include rem-fallback('line-height', $line-height-h6v2)
+    line-height: $line-height-h6v2
     @include rem-fallback('right', $space-xs)
     @include rem-fallback('top', $space-xxxxs)
     color: color(aorange)
@@ -54,7 +54,7 @@
 
   +e(text-limit)
     +rem-fallback('font-size', $font-size-xs)
-    +rem-fallback('line-height', $line-height-h6)
+    line-height: $line-height-h6
     +rem-fallback('margin-top', $space-xxs)
     font-weight: 200
     letter-spacing: 0
