--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -51,7 +51,7 @@
 
     +m(size-tiny)
       line-height: .875rem
-      font-size: 12px
+      font-size: .75rem
 
   +e(label-right)
     cursor: pointer
