--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -155,7 +155,7 @@
       line-height: $line-height-tiny
 
     &--tiny
-      +font-size(12)
+      font-size: .75rem
 
     &--museo
       font-family: $font-museo
