--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -12,7 +12,7 @@
     .pages
       width: 186px
       position: relative
-      font-size: 20px
+      font-size: 1.25rem
       font-weight: 200
       line-height: 1.625rem
       cursor: pointer
@@ -34,7 +34,7 @@
             padding-bottom: 0
 
           a
-            font-size: 16px
+            font-size: 1rem
             font-weight: 400
             line-height: 1.5rem
             display: flex
