--- a/src/styles/modules/_m-login-form.sass
+++ b/src/styles/modules/_m-login-form.sass
@@ -33,8 +33,7 @@
       background-color: #fff
       content: attr(data-content)
       display: inline-block
-      font-size: 16px
-      font-size: 22px
+      font-size: 1.375rem
       font-weight: 300
       padding: 0 .6em
       position: relative
