--- a/src/styles/modules/_m-tooltip.sass
+++ b/src/styles/modules/_m-tooltip.sass
@@ -30,7 +30,7 @@
       z-index: 100
 
   +e(content)
-    +font-size(14)
+    font-size: .875rem
     line-height: 1.375rem
     +rem-fallback('padding', 20px)
     font-weight: 300
