GD-123: 3.1. Use rem unit instead of px for font-size and line-height tokens

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -107,13 +107,13 @@
       +is(smaller)
         +rem-fallback(font-size, $font-size-xs)
         +rem-fallback(left, $space-xs)
-        +rem-fallback(line-height, $line-height-h5v2)
+        line-height: $line-height-h5v2
         +rem-fallback(top, $space-xxxxs)
         font-weight: $weight-bold
 
     +m(right)
       +rem-fallback(font-size, $font-size-xs)
-      +rem-fallback(line-height, $line-height-h5v2)
+      line-height: $line-height-h5v2
       position: initial
       float: left
       font-weight: $weight-bold
