GD-123: Fix px2rem error during build

--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -70,9 +70,9 @@
   padding: 0
   width: 100%
   list-style-type: none
-  +rem-fallback('row-gap', $space-s)
+  row-gap: $space-s
 
   +e('label')
     font-weight: 200
-    +rem-fallback('font-size', $font-size-m)
+    font-size: $font-size-m
     line-height: normal
