--- a/src/styles/modules/_m-infobox.sass
+++ b/src/styles/modules/_m-infobox.sass
@@ -3,8 +3,8 @@
   width: 100%
   background-color: #ECECEC
   border-radius: $radius-m
-  +rem-fallback('padding', $space-xxs $space-xs)
-  +rem-fallback('margin-top', $space-s)
+  padding: $space-xxs $space-xs
+  margin-top: $space-s
 
   &:before
     content: ""
