--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -25,7 +25,7 @@
       display: none
 
   +e('all-offers')
-    +rem-fallback(padding, $space-s)
+    padding: $space-s
     font-weight: 200
     background: $color-forty-per-lighter-grey
 
