--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -108,7 +108,7 @@
           background: color(awhite, base)
 
   +element('label')
-    +rem-fallback('font-size', $font-size-xs)
+    font-size: $font-size-xs
     +rem-fallback('border-radius', $radius-m)
     line-height: $line-height-h6v2
     display: inline-block
