--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -7,7 +7,7 @@
   +element('item')
     padding: 0
     margin: 0
-    +rem-fallback('margin-top', $space-xs)
+    margin-top: $space-xs
     position: relative
 
   +element('button')
@@ -87,10 +87,10 @@
           background: color(awhite, base)
 
   +element('label')
-    +rem-fallback('font-size', $font-size-m)
+    font-size: $font-size-m
     +rem-fallback('border-radius', $radius-m)
     line-height: $line-height-h4v2
-    +rem-fallback('padding-left', $space-l)
+    padding-left: $space-l
     color: color(agray, darker)
     display: inline-block
     font-weight: 200
