GD-123: Fix px2rem build error

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -146,7 +146,7 @@
 
   +e(slot)
     +m(right)
-      +rem-fallback(height, $line-height-h5)
+      height: $line-height-h5
       right: $space-xs
       top: $space-s
       display: flex
